# FoodSto-API

./: Dockerfile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
FoodSto_api/: .env  .env.sample  asgi.py  settings.py  urls.py  wsgi.py
products/: models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_price.py
