[tool.poetry]
name = "foodsto-api"
version = "0.1.0"
description = ""
authors = ["moh-ash96 <moh.ash96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
psycopg2 = "^2.9.1"
djangorestframework-simplejwt = "^4.8.0"
whitenoise = "^5.3.0"
django-cors-headers = "^3.8.0"
gunicorn = "^20.1.0"
django-environ = "^0.6.0"
psycopg2-binary = "^2.9.1"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.8b0"
requests = "^2.26.0"
fire = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
